@@ -1,3 +1,8 @@
+2012-12-13  Richard Henderson  <rth@redhat.com>
+
+	* config/alpha/alpha.c (alpha_pad_function_end): Consider barriers
+	when looking for NOTE_INSN_CALL_ARG_LOCATION.
+
 2012-12-13  Richard Biener  <rguenther@suse.de>
 
 	PR middle-end/53476
